# diario-inteligente

./: .gitignore  README.md
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/src/: database.py  main.py  nosql.py
backend/src/models/: registros.py  usuarios.py
backend/src/routers/: registro_routes.py  usuario_routes.py  vinculos_routes.py
backend/src/schemas/: registro_schema.py  usuario_schemas.py
backend/src/services/: ai_service.py  auth.py  auth_service.py  registro_service.py
frontend/: app.json  package-lock.json  package.json
frontend/src/app/: _layout.tsx  index.tsx
frontend/src/app/(auth)/: login.tsx  signup.tsx
frontend/src/app/(tabs)/: _layout.tsx  criar-registro.tsx  index.tsx  perfil.tsx  refletir.tsx
frontend/src/app/(tabs_psi)/: [id].tsx  _layout.tsx  index.tsx  perfil.tsx
frontend/src/components/: AcoesConta.tsx  CardVinculo.tsx  GraficoBarras.tsx  GraficoPizza.tsx  LogoIndex.tsx  LogoProject.tsx  ModalTrocarSenha.tsx  RegistrosCard.tsx  RemoverVinculo.tsx  SeletorFiltro.tsx
